--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 				<tr>
 					<th class="letters" id="heading1"><strong>"Reverse"</strong></th>
 				<tr>
-					<td><img id="mim1" src="projects1.jpg" /></td>
+					<td><img id="mim1" src="projects1.JPG" /></td>
 					<td class="letters" id="text"><p>So far I have played in three groups. I had my very first music band when I was 14 years old. We were "Reverse" because we were the first girls-only rock-group in our town. We had 2 concerts together before breaking up.
 </p></td>
 				</tr>		
