--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			</div>
 			<div id="footer">
 				<h4 align="center">vsemanc15@students.lcc.lt</h4>
+				<h5 align="center">photo credits:@fromky</h5>
 			</div>
 		
 		
