--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 				<img src="header.jpg" id="himage"/>
 			 </div>
 			 <ul>
-			  <li><a href="home.html">Home</a></li>
+			  <li><a href="index.html">Home</a></li>
 			  <li><a href="about.html">About</a></li>
 			  <li><a id="projects" href="projects.html">Projects</a></li>
 			  <li><a href="skills.html">Skills</a></li>
